feat(digitacao): mostra o texto a ser digitado na tela.

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Digita Aqui</title>
 	</head>
-	<body>
+	<body class="claro">
 		<div class="section">
 			<div class="section-wraper">
-				<div class="toggle-theme">
+				<div class="toggle-theme" id="alternar-tema">
 					<div class="toggle-ball"></div>
 				</div>
 				<div class="texts">
@@ -24,7 +24,7 @@
 					</p>
 				</div>
 				<div class="text-generator">
-					<p id="text">BLA BLA BLA BLA BLA</p>
+					<p id="text"></p>
 				</div>
 
 				<textarea id="entrada" rows="4" cols="50"></textarea>
